--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color2">
+        android:background="@color/colorPrimary">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -40,7 +40,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="112dp"
-                    android:background="@color/color1"
                     android:gravity="center"
                     android:paddingHorizontal="10dp"
                     android:paddingVertical="5dp"
@@ -77,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            app:tabIndicatorColor="@color/color3"
+            app:tabIndicatorColor="@color/colorAccent"
             app:tabIndicatorHeight="5dp"
             app:tabMode="scrollable">
 
