--- a/app/src/main/res/layout/tab_create.xml
+++ b/app/src/main/res/layout/tab_create.xml
@@ -25,7 +25,7 @@
             android:id="@+id/create_cards"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardBackgroundColor="@color/color2"
+            app:cardBackgroundColor="@color/colorPrimary"
             tools:layout_editor_absoluteX="1dp"
             tools:layout_editor_absoluteY="316dp">
 
@@ -164,8 +164,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_events"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
