--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#5EACB8</color>
+    <color name="colorPrimaryDark">#22858A</color>
+    <color name="colorAccent">#EC8D31</color>
+    <color name="blacky">#000000</color>
 
-    <color name="color1">#5DBCD2</color>
-    <color name="color2">#5A8494</color>
-    <color name="color3">#6F3857</color>
-    <color name="color4">#C28189</color>
-    <color name="color5">#F7C4C3</color>
-    <color name="color6">#323B58</color>
+    <color name="color1">#48C9DF</color>
+    <color name="color2">#5EACB8</color>
+    <color name="color3">#19A47B</color>
+    <color name="color4">#22858A</color>
+    <color name="color5">#FDBF46</color>
+    <color name="color6">#EC8D31</color>
+    <color name="color7">#F1E4D4</color>
 </resources>
