--- a/app/src/main/res/layout/tab_create.xml
+++ b/app/src/main/res/layout/tab_create.xml
@@ -42,6 +42,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
                     android:visibility="invisible"
+                    android:textColor="#FFFFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -76,6 +77,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="From"
+                            android:textColor="#FFFFFF"
                             android:textSize="16sp"
                             tools:layout_editor_absoluteX="61dp"
                             tools:layout_editor_absoluteY="153dp" />
@@ -85,7 +87,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:ems="10"
-                            android:inputType="date" />
+                            android:inputType="date"
+                            android:textColor="#FFFFFF"
+                            android:backgroundTint="#FFFFFF"/>
                     </TableRow>
 
                     <TableRow
@@ -97,6 +101,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="To"
+                            android:textColor="#FFFFFF"
                             android:textSize="16sp"
                             tools:layout_editor_absoluteX="61dp"
                             tools:layout_editor_absoluteY="153dp" />
@@ -106,7 +111,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:ems="10"
-                            android:inputType="date" />
+                            android:inputType="date"
+                            android:textColor="#FFFFFF"
+                            android:backgroundTint="#FFFFFF"/>
                     </TableRow>
 
                     <TableRow
@@ -119,6 +126,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginRight="20dp"
                             android:text="Destination"
+                            android:textColor="#FFFFFF"
                             android:textSize="16sp"
                             tools:layout_editor_absoluteX="61dp"
                             tools:layout_editor_absoluteY="153dp" />
@@ -127,7 +135,9 @@
                             android:id="@+id/autocomplete_create_destination"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:popupBackground="@color/color2" />
+                            android:popupBackground="@color/color2"
+                            android:textColor="#FFFFFF"
+                            android:backgroundTint="#FFFFFF"/>
                     </TableRow>
 
                 </TableLayout>
