--- a/app/src/main/res/layout/tab_ongoing.xml
+++ b/app/src/main/res/layout/tab_ongoing.xml
@@ -4,7 +4,7 @@
     android:id="@+id/ConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/no_ongoing_image"
+    android:background="@color/color2"
     android:orientation="vertical">
 
     <TextView
@@ -12,10 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="615dp"
-        android:text="There is no ongoing trip. :("
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="There is currently no ongoing trip."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
