--- a/app/src/main/res/layout/ongoing_event.xml
+++ b/app/src/main/res/layout/ongoing_event.xml
@@ -12,9 +12,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
         android:background="@color/color3"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -38,8 +36,9 @@
                 android:id="@+id/ongoing_event_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_weight="1"
                 android:maxWidth="150dp"
                 android:maxHeight="70dp"
@@ -47,6 +46,7 @@
                 android:text="EventTitle"
                 android:textAlignment="center"
                 android:textSize="18sp"
+                app:layout_constraintEnd_toStartOf="@+id/event_completed_check_box"
                 app:layout_constraintStart_toEndOf="@+id/ongoing_event_thumbnail"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,7 +54,7 @@
                 android:id="@+id/ongoing_event_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="52dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:text="TextView"
