--- a/app/src/main/res/layout/trip.xml
+++ b/app/src/main/res/layout/trip.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/color2">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -81,12 +82,6 @@
                 app:layout_constraintStart_toEndOf="@+id/trip_until"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0">
-
-                <Button
-                    android:id="@+id/trip_details"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Details" />
 
                 <Button
                     android:id="@+id/trip_remove"
