--- a/app/src/main/res/layout/trip_details.xml
+++ b/app/src/main/res/layout/trip_details.xml
@@ -1,46 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/color2">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/trip_destination2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Trip to Budapest"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/trip_period2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="16 January 2020 - 24 January 2020" />
 
         <TextView
             android:id="@+id/trip_until2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Coming up in 7 days"
-            android:textStyle="italic"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="71dp" />
+            android:textStyle="italic" />
 
-        <TextView
-            android:id="@+id/trip_period2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="16 January 2020 - 24 January 2020"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="52dp" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/trip_destination2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Trip to Budapest"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="28dp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_trip_days"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="421dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <com.google.android.material.tabs.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:tabIndicatorGravity="bottom"/>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
